--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPT JS Chat</title>
+    <title>ai-msgbot-gpt2-XL-dialogue</title>
     <link rel="stylesheet" href="css/3rdparty/hljs_androidstudio.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -30,7 +30,7 @@
         <div id="spacer-bottom" class="only-mobile"></div>
     </div>
     
-    <div id="source"><small><a href="https://github.com/dmatscheko/gpt-js" target="_blank">github src</a></small></div>
+    <div id="source"><small><a href="https://github.com/constantinethegr8/gpt-js" target="_blank">github src</a></small></div>
     <div id="buttons">
         <button id="settings-btn" title="Settings" class="toolbtn">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
